# ProLancer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h  PaintWindow.cpp  PaintWindow.h  PaintWindow.qrc  PaintWindow.ui  ProLancer.sln  QtWidgetsApplication2.sln  QtWidgetsApplication2.vcxproj  QtWidgetsApplication2.vcxproj.filters  README.md  main.cpp  package_debug.bat  package_release.bat  publish.sh  resources.qrc
QtWidget.9CA065EB/x64/Debug/: QtWidgetsApplication2.exe.recipe  QtWidgetsApplication2.ilk  vc143.idb
QtWidget.9CA065EB/x64/Debug/QtWidget.9CA065EB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  QtWidgetsApplication2.lastbuildstate  QtWidgetsApplication2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.write.1u.tlog  uic.write.1u.tlog
QtWidget.9CA065EB/x64/Debug/qt/moc/: moc_PaintWindow.cpp
QtWidget.9CA065EB/x64/Debug/qt/qmake/: qtvars.vcxproj
QtWidget.9CA065EB/x64/Debug/qt/uic/: ui_PaintWindow.h
assets/: version.txt
data/: StrokePoint.h
deploy/assets/: version.txt
src/: Canvas.cpp  Canvas.h  MainWindow.cpp  fileReader.cpp  fileReader.h  main.cpp
src/core/: BrushUtils.cpp  BrushUtils.h  CanvasController.cpp  CanvasController.h  StrokeManager.cpp  StrokeManager.h  StrokeProcessor.cpp  StrokeProcessor.h  StrokeRenderer.cpp
src/core/math/: mathUtils.cpp  mathUtils.h
src/data/: Vertex.h
src/rendering/: StrokeRenderer.cpp  StrokeRenderer.h
src/ui/: Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h
src/ui/tools/: HSVColorPicker.cpp  HSVColorPicker.h
x64/Debug/QtWidget.9CA065EB.tlog/: QtWidgetsApplication2.write.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/qt/moc/: moc_PaintWindow.cpp
x64/Debug/qt/qmake/: qtvars.vcxproj  qtvars.xml
x64/Debug/qt/rcc/: qrc_PaintWindow.cpp
